<resources>
    <string name="app_name">Connect</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="create">Create</string>
    <string name="welcome">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Signup</string>
    <string name="Welcome">Welcome</string>
    <string name="name">Nama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_content">Hello Content</string>
    <string name="addpost">Add Post</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="text_title">Title</string>
    <string name="text_post">Post</string>
    <string name="gambar">Gambar</string>
    <string name="send">Send</string>
    <string name="log_out">Logout</string>
    <string name="about_app">About App</string>
    <string name="language">Languange</string>
    <string name="account">Account</string>
    <string name="media">Media</string>
    <string name="content_title">Content Title</string>
    <string name="content_category">Content Category</string>
    <string name="avatar">Avatar</string>
    <string name="Image">Image</string>
    <string name="update">update</string>
</resources>